<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Wallet Log</string>
    <string name="action_settings">設定</string>
    <string name="dayjump">選んだ日付まで移動</string>
    <string name="hello_world">Hello world!</string>
    <string name="yen">円</string>
    <string name="save">記録</string>
    <string name="item">品目</string>
    <string name="printItem">品目</string>
    <string name="printYen">価格</string>
    <string name="printPrice">価格</string>
    <string name="addString">項目を追加</string>
    <string name="title_activity_diary">Wallet Log</string>
    <string name="title_activity_preferences">設定</string>
    <string name="txtItem">品目名</string>
    <string name="txtPrice">価格</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="dialog_number">個数</string>
    <string name="total_price">合計価格</string>
    <string name="one">1</string>
    <string name="times">×</string>
    <string name="initial_font_size">18</string>
    <string name="initial_unit_string">円</string>

</resources>
